objects/Survey_Target__c.object
<CustomObject>
    <description>Created on 01-12-2016
Survey Target</description>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandCode__c</fullName>
        <globalPicklist>Product_Brand</globalPicklist>
        <label>BrandCode</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryCode__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>CategoryCode</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocalChannelCode__c</fullName>
        <globalPicklist>ChannelCodePicklist</globalPicklist>
        <label>LocalChannelCode</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubChannelCode__c</fullName>
        <globalPicklist>ChannelCodePicklist</globalPicklist>
        <label>SubChannelCode</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>Survey Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>